rebase ADWA_13_Lot_information_at_ward_level onto develop

--- a/bundle/language_ar.properties
+++ b/bundle/language_ar.properties
@@ -821,6 +821,7 @@ angal.medicalstockward.pleaseselectanoutcomesmovementfirst                      
 angal.medicalstockward.purpose                                                   = Purpose
 angal.medicalstockward.rectify                                                   = Rectify
 angal.medicalstockward.rectify.actualquantity                                    = Actual Quantity
+angal.medicalstockward.rectify.instock                                           = في المخزن
 angal.medicalstockward.rectify.medical                                           = طبي
 angal.medicalstockward.rectify.pieces                                            = قطعة
 angal.medicalstockward.rectify.pleaseselectadrug                                 = الرجاء تحديد العلاج
@@ -874,7 +875,6 @@ angal.medicalstockwardedit.tooltip.changethepatientassociatedwiththismovement   
 angal.medicalstockwardedit.tooltip.removepatientassociationwiththismovement      = إزالة ارتباط المريض مع هذه الحركة
 angal.medicalstockwardedit.updateageandweightforthispatient                      = تحديث السن والوزن لهذا المريض؟
 angal.medicalstockwardedit.weight                                                = الوزن
-angal.medicalstockwardrectify.instock                                            = في المخزن
 angal.medstockmovtype.codemaxchars                                               = الرمز (حد أقصى عشره أحرف)
 angal.medstockmovtype.codetoolongmaxchars                                        = رمز طويل جدا (حد أقصى عشرة احرف )
 angal.medstockmovtype.deletemovementtype                                         = حذف نوع الحركة
