--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -580,6 +580,7 @@ angal.labnew.pickpatient                                                        
 angal.labnew.pleaseinsertadate                                                   = Please insert a date.
 angal.labnew.pleaseselectanexam                                                  = Please select an Exam
 angal.labnew.pleaseselectapatient                                                = Please select a Patient
+angal.labnew.printlabel                                               			 = Print Label
 angal.labnew.remove                                                              = Remove
 angal.labnew.result                                                              = Result
 angal.labnew.selectamaterial                                                     = Select a Material
@@ -667,6 +668,7 @@ angal.medicalstock.chooseavalidduedate                                          
 angal.medicalstock.chooseavalidmovementdate                                      = Choose a valid movement date
 angal.medicalstock.chooseavalidpreparationdate                                   = Choose a valid preparation date
 angal.medicalstock.chooseaward                                                   = Choose a ward
+angal.medicalstock.clickdrugs                                                    = Double click to show lot details
 angal.medicalstock.costm                                                         = COST
 angal.medicalstock.currentquantitylyinginstock                                   = Current quantity lying in stock
 angal.medicalstock.deleteall                                                     = Delete all!
@@ -758,6 +760,7 @@ angal.medicalstock.multipledischarging.packets                                  
 angal.medicalstock.multipledischarging.pleaseinsertareferencenumber              = Please insert a reference number
 angal.medicalstock.multipledischarging.pleaseinsertavalidvalue                   = Insert a valid value
 angal.medicalstock.multipledischarging.pleaseselectaward                         = please select a ward
+angal.medicalstock.multipledischarging.pleaseselectpatient                       = please select a Patient
 angal.medicalstock.multipledischarging.preparationdate                           = Preparation Date:
 angal.medicalstock.multipledischarging.proceed                                   = , proceed?
 angal.medicalstock.multipledischarging.qty                                       = Qty
@@ -818,6 +821,7 @@ angal.medicalstockward.ageto                                                    
 angal.medicalstockward.all                                                       = All
 angal.medicalstockward.allmedicals                                               = All Medicals
 angal.medicalstockward.alltypes                                                  = All Types
+angal.medicalstockward.chooselot                                                 = Choose a Lot
 angal.medicalstockward.count                                                     = Count
 angal.medicalstockward.doyoureallywanttodeletethismovement                       = Do you really want to delete this movement?
 angal.medicalstockward.drugs                                                     = Drugs
@@ -827,8 +831,11 @@ angal.medicalstockward.from                                                     
 angal.medicalstockward.incomings                                                 = Incomings
 angal.medicalstockward.insertavalidweight                                        = Insert a valid weight
 angal.medicalstockward.insertvalidage                                            = Insert a valid age
+angal.medicalstockward.invalidquantitypleasetryagain                             = Invalid Quantity!\nPlease try again.
+angal.medicalstockward.lotnumberabb                                              = Lot No.
 angal.medicalstockward.male                                                      = Male
 angal.medicalstockward.medical                                                   = Medical
+angal.medicalstockward.newlot                                                    = New a Lot
 angal.medicalstockward.outcome.destination                                       = Patient/Destination
 angal.medicalstockward.outcomes                                                  = Outcomes
 angal.medicalstockward.packets                                                   = packets
@@ -842,12 +849,31 @@ angal.medicalstockward.pleaseselectanoutcomesmovementfirst                      
 angal.medicalstockward.purpose                                                   = Purpose
 angal.medicalstockward.rectify                                                   = Rectify
 angal.medicalstockward.rectify.actualquantity                                    = Actual Quantity
+angal.medicalstockward.rectify.expiringdate                                      = Expiring
+angal.medicalstockward.rectify.expiringdateinthepastnotallowed                   = Expiring date in the past not allowed
+angal.medicalstockward.rectify.expirydatebeforepreparationdate                   = Expiring date before Preparation date not allowed
+angal.medicalstockward.rectify.futuredatenotallowed                              = Future date not allowed
+angal.medicalstockward.rectify.inlot                                             = In lot
+angal.medicalstockward.rectify.instock                                           = In stock
+angal.medicalstockward.rectify.lotid                                             = Lot id
+angal.medicalstockward.rectify.lotinformations                                   = Lot informations
+angal.medicalstockward.rectify.lotnumberSelect                                   = Please insert a lot number
+angal.medicalstockward.rectify.lotnumberabb                                      = Lot No.
 angal.medicalstockward.rectify.medical                                           = Medical
 angal.medicalstockward.rectify.pieces                                            = pieces
+angal.medicalstockward.rectify.pleaseinsertavalidvalue                           = Insert a valid value
 angal.medicalstockward.rectify.pleaseselectadrug                                 = Please Select a drug
 angal.medicalstockward.rectify.pleasespecifythereason                            = Please specify the reason
+angal.medicalstockward.rectify.preparationdate                                   = Lot preparation
+angal.medicalstockward.rectify.qty                                               = Qty
 angal.medicalstockward.rectify.reason                                            = Reason
+angal.medicalstockward.rectify.referencenumber                                   = Reference No.
+angal.medicalstockward.rectify.selectalot                                        = Select a lot
+angal.medicalstockward.rectify.thiswillemptythelotproceed                        = This operation will empty the selected lot, proceed?
 angal.medicalstockward.rectify.title                                             = Rectify
+angal.medicalstockward.rectify.totalcost                                         = Total cost
+angal.medicalstockward.rectify.unitcost                                          = Unit cost
+angal.medicalstockward.rectifyerror                                              = Not enough quantity in stock
 angal.medicalstockward.report                                                    = Report
 angal.medicalstockward.reset                                                     = Reset
 angal.medicalstockward.selectaward                                               = <select a ward>
@@ -895,7 +921,6 @@ angal.medicalstockwardedit.tooltip.changethepatientassociatedwiththismovement   
 angal.medicalstockwardedit.tooltip.removepatientassociationwiththismovement      = Remove Patient association with this movement
 angal.medicalstockwardedit.updateageandweightforthispatient                      = Update Age and Weight for this Patient?
 angal.medicalstockwardedit.weight                                                = Weight
-angal.medicalstockwardrectify.instock                                            = In stock
 angal.medstockmovtype.codemaxchars                                               = Code (max 10 chars)
 angal.medstockmovtype.codetoolongmaxchars                                        = Code too long (max 10 chars)
 angal.medstockmovtype.deletemovementtype                                         = Delete movement type 
