--- a/bundle/language_fr.properties
+++ b/bundle/language_fr.properties
@@ -196,11 +196,6 @@ angal.admission.weneed                                                          
 angal.admission.willbedeletedandhisherhistorytransferedtothepatient              = sera supprimè et son/sienne histoire transferè au Patient
 angal.admission.withthisoperationthepatient                                      = avec cette operation le Patient
 angal.admission.youareeditinganoldadmission                                      = Tu vais modifié un ancien hospitalisation
-angal.admission.check.operationdate                                               = Vérifier les dates des opérations
-angal.admission.invalidoperationdate                                             = Date d'opération non valide:
-angal.admission.theoperationdatebetween                                          = la date de l'opération doit être comprise entre
-angal.admission.theoperationdatenewerthan                                        = la date de l'opération doit être plus récente que
-angal.admtype.admissiontypebrowsing                                              = Liste typologie hospitalisation
 angal.admtype.admissiontypebrowsing                                              = Liste typologie hospitalisation 
 angal.admtype.codemaxchars                                                       = Code (max 10 caractère)
 angal.admtype.codetoolongmaxchars                                                = Code trop long (max 10 caractère)
@@ -819,6 +814,7 @@ angal.medicalstockward.pleaseselectanoutcomesmovementfirst                      
 angal.medicalstockward.purpose                                                   = Purpose
 angal.medicalstockward.rectify                                                   = Rectify
 angal.medicalstockward.rectify.actualquantity                                    = Actual Quantity
+angal.medicalstockward.rectify.instock                                           = En magasin
 angal.medicalstockward.rectify.medical                                           = Médicament
 angal.medicalstockward.rectify.pieces                                            = pieces
 angal.medicalstockward.rectify.pleaseselectadrug                                 = Selectionez un medicamentdrug
@@ -872,7 +868,6 @@ angal.medicalstockwardedit.tooltip.changethepatientassociatedwiththismovement   
 angal.medicalstockwardedit.tooltip.removepatientassociationwiththismovement      = supprimez l'association  du Patient avec ce mouvement
 angal.medicalstockwardedit.updateageandweightforthispatient                      = Update Age et poid pour ce Patient?
 angal.medicalstockwardedit.weight                                                = Poids
-angal.medicalstockwardrectify.instock                                            = En magasin
 angal.medstockmovtype.codemaxchars                                               = Code (max 10 caractère)
 angal.medstockmovtype.codetoolongmaxchars                                        = Code trop long (max 10 caractère)
 angal.medstockmovtype.deletemovementtype                                         = éliminez typologie mouvement
