--- a/bundle/language_pt.properties
+++ b/bundle/language_pt.properties
@@ -809,6 +809,7 @@ angal.medicalstockward.pleaseselectanoutcomesmovementfirst                      
 angal.medicalstockward.purpose                                                   = Purpose
 angal.medicalstockward.rectify                                                   = Retificar
 angal.medicalstockward.rectify.actualquantity                                    = Quantidade real
+angal.medicalstockward.rectify.instock                                           = Em estoque
 angal.medicalstockward.rectify.medical                                           = Médica
 angal.medicalstockward.rectify.pieces                                            = pieces
 angal.medicalstockward.rectify.pleaseselectadrug                                 = Por favor, selecione uma droga
@@ -862,7 +863,6 @@ angal.medicalstockwardedit.tooltip.changethepatientassociatedwiththismovement   
 angal.medicalstockwardedit.tooltip.removepatientassociationwiththismovement      = Remover a associação de doentes com este movimento
 angal.medicalstockwardedit.updateageandweightforthispatient                      = Atualização de idade e peso para este paciente?
 angal.medicalstockwardedit.weight                                                = Peso
-angal.medicalstockwardrectify.instock                                            = Em estoque
 angal.medstockmovtype.codemaxchars                                               = Código (max 10 caracteres)
 angal.medstockmovtype.codetoolongmaxchars                                        = Código muito tempo (max 10 caracteres)
 angal.medstockmovtype.deletemovementtype                                         = Excluir o tipo de movimento
