--- a/bundle/language_sw.properties
+++ b/bundle/language_sw.properties
@@ -809,6 +809,7 @@ angal.medicalstockward.pleaseselectanoutcomesmovementfirst                      
 angal.medicalstockward.purpose                                                   = Purpose
 angal.medicalstockward.rectify                                                   = Rectify
 angal.medicalstockward.rectify.actualquantity                                    = Actual Quantity
+angal.medicalstockward.rectify.instock                                           = kuwepo
 angal.medicalstockward.rectify.medical                                           = Utabibu
 angal.medicalstockward.rectify.pieces                                            = pieces
 angal.medicalstockward.rectify.pleaseselectadrug                                 = Tafadhali chagua dawa
@@ -862,7 +863,6 @@ angal.medicalstockwardedit.tooltip.changethepatientassociatedwiththismovement   
 angal.medicalstockwardedit.tooltip.removepatientassociationwiththismovement      = Ondoa uhusiano kati ya mgonjwa na muendelezo huu
 angal.medicalstockwardedit.updateageandweightforthispatient                      = Unataka kusasisha Umri na Uzito kwa mgonjwa huu?
 angal.medicalstockwardedit.weight                                                = Uzito
-angal.medicalstockwardrectify.instock                                            = kuwepo
 angal.medstockmovtype.codemaxchars                                               = Ishara (upeo wa herufi 10)
 angal.medstockmovtype.codetoolongmaxchars                                        = Ishara ni ndefu sana (Upeo wa herufi 10)
 angal.medstockmovtype.deletemovementtype                                         = Futa aina za uendeshaji
