--- a/bundle/language_zh_CN.properties
+++ b/bundle/language_zh_CN.properties
@@ -763,6 +763,7 @@ angal.medicalstockward.pleaseselectanoutcomesmovementfirst                      
 angal.medicalstockward.purpose                                                   = Purpose
 angal.medicalstockward.rectify                                                   = Rectify
 angal.medicalstockward.rectify.actualquantity                                    = Actual Quantity
+angal.medicalstockward.rectify.instock                                           = In stock
 angal.medicalstockward.rectify.medical                                           = Medical
 angal.medicalstockward.rectify.pieces                                            = pieces
 angal.medicalstockward.rectify.pleaseselectadrug                                 = Please Select a drug
@@ -816,7 +817,6 @@ angal.medicalstockwardedit.tooltip.changethepatientassociatedwiththismovement   
 angal.medicalstockwardedit.tooltip.removepatientassociationwiththismovement      = Remove Patient association with this movement
 angal.medicalstockwardedit.updateageandweightforthispatient                      = Update Age and Weight for this Patient?
 angal.medicalstockwardedit.weight                                                = Weight
-angal.medicalstockwardrectify.instock                                            = In stock
 angal.medstockmovtype.codemaxchars                                               = Code (max 10 chars)
 angal.medstockmovtype.codetoolongmaxchars                                        = Code too long (max 10 chars)
 angal.medstockmovtype.deletemovementtype                                         = Delete movement type
