--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -153,6 +153,7 @@ angal.admission.pleaseselectavaliddiseasein                                     
 angal.admission.pleaseselectavalidward                                           = Please select a valid ward
 angal.admission.pleaseselectthefinalname                                         = Please select the final name
 angal.admission.pleaseselecttwopatients                                          = Please select two patients
+angal.admission.pleaseselectpatient                                       		 = Please select patient
 angal.admission.poor                                                             = Poor
 angal.admission.positive                                                         = Positive
 angal.admission.present                                                          = present
@@ -580,6 +581,7 @@ angal.labnew.pickpatient                                                        
 angal.labnew.pleaseinsertadate                                                   = Please insert a date.
 angal.labnew.pleaseselectanexam                                                  = Please select an Exam
 angal.labnew.pleaseselectapatient                                                = Please select a Patient
+angal.labnew.printlabel                                               			 = Print Label
 angal.labnew.remove                                                              = Remove
 angal.labnew.result                                                              = Result
 angal.labnew.selectamaterial                                                     = Select a Material
