Some improvements on Procedure3
- Disable Results button in ExamBrowser when selected a procedure 3 exam
- Removed numeric constraint for UoM
- Changed message for empty vales

--- a/bundle/language_ar.properties
+++ b/bundle/language_ar.properties
@@ -561,6 +561,7 @@ angal.labnew.noexamsinserted                                                    
 angal.labnew.note                                                                = ملاحظة
 angal.labnew.pickpatient                                                         = البحث عن مريض
 angal.labnew.pleaseinsertadate                                                   = الرجاء إدخال تاريخ القاح
+angal.labnew.pleaseinsertavalidvalue                                             = إدراج قيمة صالحة
 angal.labnew.pleaseselectanexam                                                  = يرجى تحديد الاختبار
 angal.labnew.pleaseselectapatient                                                = الرجاء اختيار المريض
 angal.labnew.remove                                                              = نزع
