--- a/bundle/language_es.properties
+++ b/bundle/language_es.properties
@@ -552,6 +552,7 @@ angal.labnew.noexamsinserted                                                    
 angal.labnew.note                                                                = Nota
 angal.labnew.pickpatient                                                         = Asociar Paciente
 angal.labnew.pleaseinsertadate                                                   = Por favor digitar una fecha.
+angal.labnew.pleaseinsertavalidvalue                                             = Digitar un valor válido
 angal.labnew.pleaseselectanexam                                                  = Seleccionar un Examen
 angal.labnew.pleaseselectapatient                                                = Seleccionar un paciente
 angal.labnew.remove                                                              = Remover
