--- a/bundle/language_it.properties
+++ b/bundle/language_it.properties
@@ -565,6 +565,7 @@ angal.labnew.noexamsinserted                                                    
 angal.labnew.note                                                                = Nota / Referto
 angal.labnew.pickpatient                                                         = Associa Paziente
 angal.labnew.pleaseinsertadate                                                   = Prego inserire una data.
+angal.labnew.pleaseinsertavalidvalue                                             = Inserire un valore valido
 angal.labnew.pleaseselectanexam                                                  = Selezionare un Esame
 angal.labnew.pleaseselectapatient                                                = Selezionare un paziente
 angal.labnew.remove                                                              = Rimuovi
