--- a/bundle/language_pt.properties
+++ b/bundle/language_pt.properties
@@ -549,6 +549,7 @@ angal.labnew.noexamsinserted                                                    
 angal.labnew.note                                                                = Nota
 angal.labnew.pickpatient                                                         = Encontrar Paciente
 angal.labnew.pleaseinsertadate                                                   = Insira uma data.
+angal.labnew.pleaseinsertavalidvalue                                             = Insira um valor válido
 angal.labnew.pleaseselectanexam                                                  = Selecione um exame
 angal.labnew.pleaseselectapatient                                                = Por favor selecione um paciente
 angal.labnew.remove                                                              = Remover
