--- a/bundle/language_zh_CN.properties
+++ b/bundle/language_zh_CN.properties
@@ -503,6 +503,7 @@ angal.labnew.noexamsinserted                                                    
 angal.labnew.note                                                                = Note
 angal.labnew.pickpatient                                                         = Find Patient
 angal.labnew.pleaseinsertadate                                                   = Please insert a date.
+angal.labnew.pleaseinsertavalidvalue                                             = Insert a valid value
 angal.labnew.pleaseselectanexam                                                  = Please select an Exam
 angal.labnew.pleaseselectapatient                                                = Please select a Patient
 angal.labnew.remove                                                              = Remove
