--- a/bundle/language_de.properties
+++ b/bundle/language_de.properties
@@ -549,6 +549,7 @@ angal.labnew.noexamsinserted                                                    
 angal.labnew.note                                                                = Note
 angal.labnew.pickpatient                                                         = Find Patient
 angal.labnew.pleaseinsertadate                                                   = Please insert a date.
+angal.labnew.pleaseinsertavalidvalue                                             = Geben Sie einen gültigen Wert ein.
 angal.labnew.pleaseselectanexam                                                  = Please select an Exam
 angal.labnew.pleaseselectapatient                                                = Please select a Patient
 angal.labnew.remove                                                              = Remove
