--- a/bundle/language_fr.properties
+++ b/bundle/language_fr.properties
@@ -196,11 +196,6 @@ angal.admission.weneed                                                          
 angal.admission.willbedeletedandhisherhistorytransferedtothepatient              = sera supprimè et son/sienne histoire transferè au Patient
 angal.admission.withthisoperationthepatient                                      = avec cette operation le Patient
 angal.admission.youareeditinganoldadmission                                      = Tu vais modifié un ancien hospitalisation
-angal.admission.check.operationdate                                               = Vérifier les dates des opérations
-angal.admission.invalidoperationdate                                             = Date d'opération non valide:
-angal.admission.theoperationdatebetween                                          = la date de l'opération doit être comprise entre
-angal.admission.theoperationdatenewerthan                                        = la date de l'opération doit être plus récente que
-angal.admtype.admissiontypebrowsing                                              = Liste typologie hospitalisation
 angal.admtype.admissiontypebrowsing                                              = Liste typologie hospitalisation 
 angal.admtype.codemaxchars                                                       = Code (max 10 caractère)
 angal.admtype.codetoolongmaxchars                                                = Code trop long (max 10 caractère)
@@ -559,6 +554,7 @@ angal.labnew.noexamsinserted                                                    
 angal.labnew.note                                                                = note
 angal.labnew.pickpatient                                                         = Trouvez Patient
 angal.labnew.pleaseinsertadate                                                   = Inserez une date.
+angal.labnew.pleaseinsertavalidvalue                                             = Insérez une valeur valide
 angal.labnew.pleaseselectanexam                                                  = selectionnez un Examen
 angal.labnew.pleaseselectapatient                                                = selectionnez un Patient
 angal.labnew.remove                                                              = Supprimer
