--- a/bundle/language_sw.properties
+++ b/bundle/language_sw.properties
@@ -549,6 +549,7 @@ angal.labnew.noexamsinserted                                                    
 angal.labnew.note                                                                = Maelezo
 angal.labnew.pickpatient                                                         = Tafuta Mgonjwa
 angal.labnew.pleaseinsertadate                                                   = Tafadhali ingiza tarehe
+angal.labnew.pleaseinsertavalidvalue                                             = weka Dhamani sahihi
 angal.labnew.pleaseselectanexam                                                  = Tafadhali chagua uchunguzi
 angal.labnew.pleaseselectapatient                                                = Tafadhali chagua Mgonjwa
 angal.labnew.remove                                                              = Ondoa
