ADWA_13 Lot information at the wards level (#175)
ADWA_13 Lot information at the wards level

--- a/bundle/language_de.properties
+++ b/bundle/language_de.properties
@@ -810,6 +810,7 @@ angal.medicalstockward.pleaseselectanoutcomesmovementfirst                      
 angal.medicalstockward.purpose                                                   = Purpose
 angal.medicalstockward.rectify                                                   = Rectify
 angal.medicalstockward.rectify.actualquantity                                    = Actual Quantity
+angal.medicalstockward.rectify.instock                                           = Lagerbestand
 angal.medicalstockward.rectify.medical                                           = Medikament
 angal.medicalstockward.rectify.pieces                                            = pieces
 angal.medicalstockward.rectify.pleaseselectadrug                                 = Bitte wählen Sie eine Droge
@@ -863,7 +864,6 @@ angal.medicalstockwardedit.tooltip.changethepatientassociatedwiththismovement   
 angal.medicalstockwardedit.tooltip.removepatientassociationwiththismovement      = Remove Patient association with this movement
 angal.medicalstockwardedit.updateageandweightforthispatient                      = Update Age and Weight for this Patient?
 angal.medicalstockwardedit.weight                                                = Gewicht
-angal.medicalstockwardrectify.instock                                            = Lagerbestand
 angal.medstockmovtype.codemaxchars                                               = Code (max. 10 Stellen)
 angal.medstockmovtype.codetoolongmaxchars                                        = Code zu lang (max. 10 Stellen)
 angal.medstockmovtype.deletemovementtype                                         = Versandgrund löschen
