--- a/bundle/language_fr.properties
+++ b/bundle/language_fr.properties
@@ -815,6 +815,7 @@ angal.medicalstockward.pleaseselectanoutcomesmovementfirst                      
 angal.medicalstockward.purpose                                                   = Purpose
 angal.medicalstockward.rectify                                                   = Rectify
 angal.medicalstockward.rectify.actualquantity                                    = Actual Quantity
+angal.medicalstockward.rectify.instock                                           = En magasin
 angal.medicalstockward.rectify.medical                                           = Médicament
 angal.medicalstockward.rectify.pieces                                            = pieces
 angal.medicalstockward.rectify.pleaseselectadrug                                 = Selectionez un medicamentdrug
@@ -868,7 +869,6 @@ angal.medicalstockwardedit.tooltip.changethepatientassociatedwiththismovement   
 angal.medicalstockwardedit.tooltip.removepatientassociationwiththismovement      = supprimez l'association  du Patient avec ce mouvement
 angal.medicalstockwardedit.updateageandweightforthispatient                      = Update Age et poid pour ce Patient?
 angal.medicalstockwardedit.weight                                                = Poids
-angal.medicalstockwardrectify.instock                                            = En magasin
 angal.medstockmovtype.codemaxchars                                               = Code (max 10 caractère)
 angal.medstockmovtype.codetoolongmaxchars                                        = Code trop long (max 10 caractère)
 angal.medstockmovtype.deletemovementtype                                         = éliminez typologie mouvement
