--- a/bundle/language_es.properties
+++ b/bundle/language_es.properties
@@ -813,6 +813,7 @@ angal.medicalstockward.pleaseselectanoutcomesmovementfirst                      
 angal.medicalstockward.purpose                                                   = Finalidad
 angal.medicalstockward.rectify                                                   = Rectifique
 angal.medicalstockward.rectify.actualquantity                                    = Cantidad real
+angal.medicalstockward.rectify.instock                                           = En almacén
 angal.medicalstockward.rectify.medical                                           = Fármaco
 angal.medicalstockward.rectify.pieces                                            = partes
 angal.medicalstockward.rectify.pleaseselectadrug                                 = Seleccionar un fármaco
@@ -866,7 +867,6 @@ angal.medicalstockwardedit.tooltip.changethepatientassociatedwiththismovement   
 angal.medicalstockwardedit.tooltip.removepatientassociationwiththismovement      = Remover el paciente asociado a este movimiento
 angal.medicalstockwardedit.updateageandweightforthispatient                      = óActualizar Edad y peso para este paciente?
 angal.medicalstockwardedit.weight                                                = Peso
-angal.medicalstockwardrectify.instock                                            = En almacén
 angal.medstockmovtype.codemaxchars                                               = Código   (máx. 10 caracteres)
 angal.medstockmovtype.codetoolongmaxchars                                        = Código muy largo (máx. 10 caracteres)
 angal.medstockmovtype.deletemovementtype                                         = Eliminar tipología movimiento
