Fixed some bundles in Patient Examinations
Conflicts:
	src/main/java/org/isf/examination/gui/PatientExaminationEdit.java

--- a/bundle/language_de.properties
+++ b/bundle/language_de.properties
@@ -421,11 +421,12 @@ angal.examination.bmi.obesityclassilight                                        
 angal.examination.bmi.overweight                                                 = Overweight
 angal.examination.bmi.severeunderweight                                          = Severe Underweight
 angal.examination.bmi.underweight                                                = Underweight
-angal.examination.bowel                                                          = Bowel
+angal.examination.bowel                                                          = Darm
 angal.examination.bowel.constipation                                             = Verstopfung
 angal.examination.bowel.diarrheal                                                = Durchfall
 angal.examination.bowel.irregular                                                = Irregular
 angal.examination.bowel.regular                                                  = Regulär
+angal.examination.bowelabbr                                                      = D
 angal.examination.diuresis                                                       = Diuresis
 angal.examination.diuresis.anuria                                                = Anurie
 angal.examination.diuresis.frequent                                              = Pollakiuria
@@ -435,7 +436,9 @@ angal.examination.diuresis.oliguria                                             
 angal.examination.diuresis.physiological                                         = Physiologisch
 angal.examination.diuresis.pyuria                                                = Pyurie
 angal.examination.diuresis.stranguria                                            = Stranguria
+angal.examination.diuresisabbr                                                   = D
 angal.examination.diuresisvolume24h                                              = Diuresis Vol 24H
+angal.examination.diuresisvolume24habbr                                          = D24H
 angal.examination.heartrate                                                      = Heart Rate
 angal.examination.heartrateabbr                                                  = HR
 angal.examination.height                                                         = Größe
