--- a/bundle/language_es.properties
+++ b/bundle/language_es.properties
@@ -424,7 +424,6 @@ angal.examination.bmi.obesityclassilight                                        
 angal.examination.bmi.overweight                                                 = Sobrepeso
 angal.examination.bmi.severeunderweight                                          = Bajo peso grave
 angal.examination.bmi.underweight                                                = Bajo peso
-angal.examination.bowel                                                          = Bowel
 angal.examination.bowel.constipation                                             = Constipación
 angal.examination.bowel.diarrheal                                                = Diarrea
 angal.examination.bowel.irregular                                                = Irregular
@@ -438,7 +437,9 @@ angal.examination.diuresis.oliguria                                             
 angal.examination.diuresis.physiological                                         = Fisiológica
 angal.examination.diuresis.pyuria                                                = Pyuria
 angal.examination.diuresis.stranguria                                            = Estranguria
+angal.examination.diuresisabbr                                                   = D
 angal.examination.diuresisvolume24h                                              = Diuresis Vol 24H
+angal.examination.diuresisvolume24habbr                                          = D24H
 angal.examination.heartrate                                                      = Pulsaciones
 angal.examination.heartrateabbr                                                  = P
 angal.examination.height                                                         = Altura
