--- a/bundle/language_fr.properties
+++ b/bundle/language_fr.properties
@@ -426,11 +426,12 @@ angal.examination.bmi.obesityclassilight                                        
 angal.examination.bmi.overweight                                                 = Overweight
 angal.examination.bmi.severeunderweight                                          = Severe Underweight
 angal.examination.bmi.underweight                                                = Underweight
-angal.examination.bowel                                                          = Bowel
+angal.examination.bowel                                                          = Intestin
 angal.examination.bowel.constipation                                             = Constipation
 angal.examination.bowel.diarrheal                                                = Diarrhée
 angal.examination.bowel.irregular                                                = Irregular
 angal.examination.bowel.regular                                                  = Régulier
+angal.examination.bowelabbr                                                      = I
 angal.examination.diuresis                                                       = Diurèse
 angal.examination.diuresis.anuria                                                = Anurie
 angal.examination.diuresis.frequent                                              = Pollakiurie
@@ -440,7 +441,9 @@ angal.examination.diuresis.oliguria                                             
 angal.examination.diuresis.physiological                                         = Physiologique
 angal.examination.diuresis.pyuria                                                = Pyuria
 angal.examination.diuresis.stranguria                                            = Strangurie
+angal.examination.diuresisabbr                                                   = D
 angal.examination.diuresisvolume24h                                              = Diurèse Vol 24H
+angal.examination.diuresisvolume24habbr                                          = D24H
 angal.examination.heartrate                                                      = Fréquence Cardiaque
 angal.examination.heartrateabbr                                                  = FC
 angal.examination.height                                                         = Hanteur
