--- a/bundle/language_it.properties
+++ b/bundle/language_it.properties
@@ -440,6 +440,7 @@ angal.examination.bowel.constipation                                            
 angal.examination.bowel.diarrheal                                                = Diarroico
 angal.examination.bowel.irregular                                                = Irregolare
 angal.examination.bowel.regular                                                  = Regolare
+angal.examination.bowelabbr                                                      = A
 angal.examination.diuresis                                                       = Diuresi
 angal.examination.diuresis.anuria                                                = Anuria
 angal.examination.diuresis.frequent                                              = Pollachiuria
@@ -449,7 +450,9 @@ angal.examination.diuresis.oliguria                                             
 angal.examination.diuresis.physiological                                         = Fisiologica
 angal.examination.diuresis.pyuria                                                = Piuria
 angal.examination.diuresis.stranguria                                            = Stranguria
+angal.examination.diuresisabbr                                                   = D
 angal.examination.diuresisvolume24h                                              = Diuresi Vol 24H
+angal.examination.diuresisvolume24habbr                                          = D24H
 angal.examination.heartrate                                                      = Frequenza Cardiaca
 angal.examination.heartrateabbr                                                  = FC
 angal.examination.height                                                         = Altezza
