--- a/bundle/language_pt.properties
+++ b/bundle/language_pt.properties
@@ -421,7 +421,6 @@ angal.examination.bmi.obesityclassilight                                        
 angal.examination.bmi.overweight                                                 = Excesso de peso
 angal.examination.bmi.severeunderweight                                          = Gravemente abaixo do peso
 angal.examination.bmi.underweight                                                = Abaixo do Peso
-angal.examination.bowel                                                          = Bowel
 angal.examination.bowel.constipation                                             = Constipação
 angal.examination.bowel.diarrheal                                                = Diarrheal
 angal.examination.bowel.irregular                                                = Irregular
@@ -435,7 +434,9 @@ angal.examination.diuresis.oliguria                                             
 angal.examination.diuresis.physiological                                         = Fisiológica
 angal.examination.diuresis.pyuria                                                = Piúria
 angal.examination.diuresis.stranguria                                            = Stranguria
+angal.examination.diuresisabbr                                                   = D
 angal.examination.diuresisvolume24h                                              = Diurese Vol 24H
+angal.examination.diuresisvolume24habbr                                          = D24H
 angal.examination.heartrate                                                      = Ritmo Cardíaco
 angal.examination.heartrateabbr                                                  = RC
 angal.examination.height                                                         = Altura
