--- a/bundle/language_sw.properties
+++ b/bundle/language_sw.properties
@@ -421,7 +421,6 @@ angal.examination.bmi.obesityclassilight                                        
 angal.examination.bmi.overweight                                                 = Uzito Kuzidi
 angal.examination.bmi.severeunderweight                                          = Uzito pungufu kali
 angal.examination.bmi.underweight                                                = Uzito pungufu
-angal.examination.bowel                                                          = Bowel
 angal.examination.bowel.constipation                                             = Kumeza
 angal.examination.bowel.diarrheal                                                = Mchanganyiko
 angal.examination.bowel.irregular                                                = Irregular
@@ -435,7 +434,9 @@ angal.examination.diuresis.oliguria                                             
 angal.examination.diuresis.physiological                                         = Kisaikolojia
 angal.examination.diuresis.pyuria                                                = Pyuria
 angal.examination.diuresis.stranguria                                            = Stranguria
+angal.examination.diuresisabbr                                                   = D
 angal.examination.diuresisvolume24h                                              = Diuresis Vol 24H
+angal.examination.diuresisvolume24habbr                                          = D24H
 angal.examination.heartrate                                                      = Kiwango cha Moyo
 angal.examination.heartrateabbr                                                  = KM
 angal.examination.height                                                         = Urefu
