Fixed some bundles in Patient Examinations

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -452,6 +452,7 @@ angal.examination.bowel.constipation                                            
 angal.examination.bowel.diarrheal                                                = Diarrheal
 angal.examination.bowel.irregular                                                = Irregular
 angal.examination.bowel.regular                                                  = Regular
+angal.examination.bowelabbr                                                      = B
 angal.examination.diuresis                                                       = Diuresis
 angal.examination.diuresis.anuria                                                = Anuria
 angal.examination.diuresis.frequent                                              = Pollakiuria
@@ -461,7 +462,9 @@ angal.examination.diuresis.oliguria                                             
 angal.examination.diuresis.physiological                                         = Physiological
 angal.examination.diuresis.pyuria                                                = Pyuria
 angal.examination.diuresis.stranguria                                            = Stranguria
+angal.examination.diuresisabbr                                                   = D
 angal.examination.diuresisvolume24h                                              = Diuresis Vol 24H
+angal.examination.diuresisvolume24habbr                                          = D24H
 angal.examination.heartrate                                                      = Heart Rate
 angal.examination.heartrateabbr                                                  = HR
 angal.examination.height                                                         = Height
