--- a/bundle/language_ar.properties
+++ b/bundle/language_ar.properties
@@ -277,6 +277,7 @@ angal.common.descriptionstar                                                    
 angal.common.doyouwanttoproceed                                                  = هل تريد المتابعة؟
 angal.common.edit                                                                = تعديل
 angal.common.editm                                                               = تعديل
+angal.common.emailmustbevalid                                                    = يجب ان يكون البريد الاكتروني صحيح
 angal.common.excel                                                               = Excel
 angal.common.from                                                                = من
 angal.common.hours                                                               = Hours
