--- a/bundle/language_de.properties
+++ b/bundle/language_de.properties
@@ -275,6 +275,7 @@ angal.common.descriptionstar                                                    
 angal.common.doyouwanttoproceed                                                  = Willst du fortfahren?
 angal.common.edit                                                                = Ändern
 angal.common.editm                                                               = ÄNDERN
+angal.common.emailmustbevalid                                                    = Email muss gültig sein
 angal.common.excel                                                               = Excel
 angal.common.from                                                                = Seit
 angal.common.hours                                                               = Hours
