--- a/bundle/language_es.properties
+++ b/bundle/language_es.properties
@@ -278,6 +278,7 @@ angal.common.descriptionstar                                                    
 angal.common.doyouwanttoproceed                                                  = Quieres proceder?
 angal.common.edit                                                                = Modificar
 angal.common.editm                                                               = MODIFICAR
+angal.common.emailmustbevalid                                                    = El email debe ser válido
 angal.common.excel                                                               = Excel
 angal.common.from                                                                = Da
 angal.common.hours                                                               = Horas
