--- a/bundle/language_fr.properties
+++ b/bundle/language_fr.properties
@@ -280,6 +280,7 @@ angal.common.descriptionstar                                                    
 angal.common.doyouwanttoproceed                                                  = Voulez-vous poursuivre?
 angal.common.edit                                                                = Modification
 angal.common.editm                                                               = MODIFICATION
+angal.common.emailmustbevalid                                                    = L'email doit être valide
 angal.common.excel                                                               = Excel
 angal.common.from                                                                = De
 angal.common.hours                                                               = Hours
