--- a/bundle/language_it.properties
+++ b/bundle/language_it.properties
@@ -280,6 +280,7 @@ angal.common.descriptionstar                                                    
 angal.common.doyouwanttoproceed                                                  = Vuoi procedere?
 angal.common.edit                                                                = Modifica
 angal.common.editm                                                               = MODIFICA
+angal.common.emailmustbevalid                                                    = L'email deve essere valida
 angal.common.excel                                                               = Excel
 angal.common.from                                                                = Da
 angal.common.hours                                                               = Ore
