--- a/bundle/language_pt.properties
+++ b/bundle/language_pt.properties
@@ -275,6 +275,7 @@ angal.common.descriptionstar                                                    
 angal.common.doyouwanttoproceed                                                  = Você quer prosseguir?
 angal.common.edit                                                                = Editar
 angal.common.editm                                                               = EDITAR
+angal.common.emailmustbevalid                                                    = E-mail deve ser válido
 angal.common.excel                                                               = Excel
 angal.common.from                                                                = De
 angal.common.hours                                                               = Horas
