--- a/bundle/language_sw.properties
+++ b/bundle/language_sw.properties
@@ -275,6 +275,7 @@ angal.common.descriptionstar                                                    
 angal.common.doyouwanttoproceed                                                  = Je, unataka kuendelea?
 angal.common.edit                                                                = Hariri
 angal.common.editm                                                               = HARIRI
+angal.common.emailmustbevalid                                                    = Email måste vara giltig
 angal.common.excel                                                               = Excel
 angal.common.from                                                                = Kutoka
 angal.common.hours                                                               = Masaa
