--- a/bundle/language_zh_CN.properties
+++ b/bundle/language_zh_CN.properties
@@ -263,6 +263,7 @@ angal.common.descriptionstar                                                    
 angal.common.doyouwanttoproceed                                                  = Do you want to proceed?
 angal.common.edit                                                                = Edit
 angal.common.editm                                                               = EDIT
+angal.common.emailmustbevalid                                                    = Email must be valid
 angal.common.excel                                                               = Excel
 angal.common.from                                                                = From
 angal.common.hours                                                               = Hours
